TDI-25595 : babili update for 5.3.0
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@101595 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
@@ -36,3 +36,12 @@ CreateHadoopNodeAction.createLabel=Create {0}
 CreateHadoopNodeAction.editLabel=Edit {0}
 CreateHadoopNodeAction.openLabel=Open {0}
 AbstractHadoopClusterMigrationTask.errorMsg=Fail to execute hadoop cluster migration task
+HadoopClusterForm.customSettings=Custom
+HadoopClusterForm.authentication=Authentication
+HadoopClusterForm.authentication.tooltip=Set the authentication mode
+HadoopClusterForm.check.authentication=Authentication must be specified
+HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
+HadoopClusterForm.check.jobtrackerURI.invalid=Jobtracker URI is invalid
+HadoopClusterForm.check.principal.invalid=Principal is invalid
+HadoopClusterForm.check.userName.invalid=User name is invalid
+HadoopClusterForm.check.group.invalid=Group is invalid
