--- a/org.talend.repository.hcatalog.nl/src/messages_en.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_en.properties
@@ -38,9 +38,13 @@ HCatalogForm.templetonSettings=Templeton Settings
 HCatalogForm.text.host=Host name
 HCatalogForm.text.port=Port
 HCatalogForm.text.userName=User name
+HCatalogForm.text.krbPrincipal=KRB principal
+HCatalogForm.text.krbRealm=KRB realm
 HCatalogForm.check.host=Host name must be specified
 HCatalogForm.check.port=Port must be specified
 HCatalogForm.check.userName=User name must be specified
+HCatalogForm.check.krbPrincipal=KRB principal must be specified
+HCatalogForm.check.krbRealm=KRB realm must be specified
 HCatalogForm.check.database=Database must be specified
 HCatalogForm.check.checkConnection=You must press the Check Button to check the HCatalog Settings
 HCatalogForm.databaseSettings=Database Settings
@@ -67,3 +71,9 @@ CreateHCatalogSchemaAction.connectionFailure.mainMsg=Connection failure. You mus
 CreateHCatalogSchemaAction.connectionFailure.detailMsg=Cannot connect to HCatalog. Please check the connection parameters.
 CreateHCatalogSchemaAction.checkConnection=Checking HCatalog connection...
 HCatalogRepositoryContentHandler.partitions=Partitions
+HCatalogForm.check.host.invalid=Host name is invalid
+HCatalogForm.check.port.invalid=Port is invalid
+HCatalogForm.check.userName.invalid=User name is invalid
+HCatalogForm.check.krbPrincipal.invalid=Principal is invalid
+HCatalogForm.check.krbRealm.invalid=Realm is invalid
+HCatalogForm.check.database.invalid=Database is invalid
