--- a/org.talend.repository.hdfs.nl/src/messages_de.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_de.properties
@@ -33,3 +33,5 @@ HDFSSchemaForm.msg.deleteSchema=Dieses Schema löschen - sicher?
 HDFSSchemaForm.check.tableNameIsEmpty=Schema hat einen leeren Namen, muss festgelegt sein
 CreateHDFSSchemaAction.createLabel=Schema ermitteln
 CreateHDFSSchemaAction.editLabel=Ändere Schema
+HDFSFileSelectorForm.schemaTree.sizeColumn=Größe
+HDFSSchemaForm.button.guessSchema=Ermittle Schema
