--- a/org.talend.repository.hdfs.nl/src/messages_fr.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_fr.properties
@@ -5,6 +5,7 @@ HDFSWizardPage.titleUpdate.Step1=Mettre à jour la connexion HDFS - Etape 1/2
 HDFSWizardPage.titleUpdate.Step2=Mettre à jour la connexion HDFS - Etape 2/2
 HDFSFileSelectorForm.selectFiles=Sélectionnez les fichiers pour récupérer les schémas
 HDFSFileSelectorForm.nameFilter=Filtre sur le nom \:
+HDFSFileSelectorForm.schemaTree.nameColumn=Nom
 HDFSFileSelectorForm.schemaTree.numberColumn=Nombre de colonnes
 HDFSFileSelectorForm.title.success=Succès
 HDFSFileSelectorForm.tableIsExist=Un(e) autre "{0}" existe déjà dans "{1}". L'écraser ?
@@ -18,5 +19,7 @@ HDFSForm.rowSeparator.tooltip=Configurer le séparateur de lignes
 HDFSForm.fieldSeparator=Séparateur de champs
 HDFSForm.fieldSeparator.tooltip=Configurer le séparateur de champs
 HDFSSchemaForm.button.retrieveSchema.tooltip=Cliquez sur ce bouton pour obtenir un schéma détaillé.
+HDFSSchemaForm.text.name=Nom
 HDFSSchemaForm.tableNavigator.tableColumn=Table
 CreateHDFSSchemaAction.checkConnection=Vérifier la connexion HDFS...
+HDFSSchemaForm.button.guessSchema=Détecter le schéma
