--- a/org.talend.repository.oozie.nl/src/messages_en.properties
+++ b/org.talend.repository.oozie.nl/src/messages_en.properties
@@ -17,3 +17,5 @@ OozieWizard.oozieConnection=Oozie Connection
 OozieWizard.persistenceException=Access to the data failure
 OozieWizard.titleStep1=New Oozie Connection on repository - Step 1/2
 OozieWizard.titleStep2=New Oozie Connection on repository - Step 2/2
+OozieForm.endPointInvalid.invalid=End Point is invalid
+OozieForm.nameInvalid.invalid=User name is invalid
