--- a/org.talend.repository.hcatalog.nl/src/messages_fr.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_fr.properties
@@ -17,6 +17,7 @@ AbstractHCatalogForm.checkConnection.success.msg=Connexion "{0}" établie.
 AbstractHCatalogForm.checkConnection.failure.msg=Echec de la connexion. Modifiez les paramètres de HCatalog.
 HCatalogTableSelectorForm.selectFiles=Sélectionner les tables pour récupérer les schémas
 HCatalogTableSelectorForm.nameFilter=Filtre sur le nom \:
+HCatalogTableSelectorForm.schemaTree.nameColumn=Nom
 HCatalogTableSelectorForm.schemaTree.numberColumn=Nombre de colonnes
 HCatalogTableSelectorForm.schemaTree.statusColumn=Statut de création
 HCatalogTableSelectorForm.button.selectAll=Tout sélectionner
@@ -42,6 +43,7 @@ HCatalogSchemaForm.button.retrieveSchema=Récupérer le schéma
 HCatalogSchemaForm.button.retrieveSchema.tooltip=Cliquez sur ce bouton pour obtenir un schéma détaillé.
 HCatalogSchemaForm.button.addSchema=Ajouter un schéma
 HCatalogSchemaForm.button.removeSchema=Supprimer le schéma
+HCatalogSchemaForm.text.name=Nom
 HCatalogSchemaForm.group.schema.title=Schéma
 HCatalogSchemaForm.tableNavigator.tableColumn=Table
 HCatalogSchemaForm.title.confirmChange=Confirmer les modifications ?
