--- a/org.talend.repository.hcatalog.nl/src/messages_ja.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_ja.properties
@@ -1,6 +1,7 @@
 HCatalogWizard.windowTitle=HCatalog\u63A5\u7D9A\u5B9A\u7FA9
 HCatalogWizard.persistenceException=\u30C7\u30FC\u30BF\u30A2\u30AF\u30BB\u30B9\u304C\u5931\u6557\u3057\u307E\u3057\u305F
 HCatalogWizardPage.titleCreate.Step1=\u65B0\u898FHCatalog\u63A5\u7D9A\u3092\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u8FFD\u52A0 - \u30B9\u30C6\u30C3\u30D7 1/2
+HCatalogWizardPage.descriptionCreate.Step1=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u5B9A\u7FA9
 HCatalogWizardPage.titleCreate.Step2=\u65B0\u898FHCatalog\u63A5\u7D9A\u3092\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u8FFD\u52A0 - \u30B9\u30C6\u30C3\u30D7 2/2
 HCatalogWizardPage.descriptionCreate.Step2=\u63A5\u7D9A\u30D1\u30E9\u30E1\u30FC\u30BF\u306E\u5B9A\u7FA9
 HCatalogWizardPage.titleUpdate.Step1=HCatalog\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30C6\u30C3\u30D7 1/2
@@ -10,20 +11,34 @@ HCatalogWizardPage.descriptionUpdate.Step2=\u63A5\u7D9A\u30D1\u30E9\u30E1\u30FC\
 HCatalogSchemaWizardPage.descriptionCreate=\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u65B0\u898F\u30B9\u30AD\u30FC\u30DE\u3092\u8FFD\u52A0
 HCatalogSchemaWizardPage.descriptionUpdate=\u30EA\u30DD\u30B8\u30C8\u30EA\u5185\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u66F4\u65B0\u3057\u307E\u3059\u3002
 HCatalogTableSelectorForm.selectFiles=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u53D6\u5F97\u3057\u3066\u30C6\u30FC\u30D6\u30EB\u3092\u9078\u629E
+HCatalogTableSelectorForm.nameFilter.tooltip=\u30BF\u30A4\u30D7\u540D\u306E\u63A5\u982D\u8A9E\u3001\u3042\u308B\u3044\u306F\u30D1\u30BF\u30FC\u30F3(*\u3001?\u3001\u3042\u308B\u3044\u306Fcamel case)\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 HCatalogTableSelectorForm.schemaTree.nameColumn=\u540D
 HCatalogTableSelectorForm.schemaTree.typeColumn=\u578B
 HCatalogTableSelectorForm.schemaTree.numberColumn=\u30AB\u30E9\u30E0\u756A\u53F7
 HCatalogTableSelectorForm.schemaTree.statusColumn=\u751F\u6210\u30B9\u30C6\u30FC\u30BF\u30B9
+HCatalogTableSelectorForm.button.selectAll=\u3059\u3079\u3066\u9078\u629E
+HCatalogTableSelectorForm.button.selectNone=\u4F55\u3082\u9078\u629E\u3055\u308C\u3066\u3044\u307E\u305B\u3093
 HCatalogTableSelectorForm.button.checkConnection=\u63A5\u7D9A\u78BA\u8A8D
 HCatalogTableSelectorForm.extractColumns=\u30AB\u30E9\u30E0\u3092\u62BD\u51FA...
+HCatalogTableSelectorForm.Pending=\u30DA\u30F3\u30C7\u30A3\u30F3\u30B0
+HCatalogTableSelectorForm.title.success=\u6210\u529F
 HCatalogTableSelectorForm.AchieveSchema=HCatalog\u30B9\u30AD\u30FC\u30DE\u3092\u30A2\u30FC\u30AB\u30A4\u30D6\u4E2D...
+HCatalogForm.text.host=\u30DB\u30B9\u30C8\u540D
+HCatalogForm.text.port=\u30DD\u30FC\u30C8
 HCatalogForm.check.database=DB\u3092\u5B9A\u7FA9\u3057\u3066\u4E0B\u3055\u3044
 HCatalogForm.databaseSettings=DB\u8A2D\u5B9A
 HCatalogForm.text.database=DB
+HCatalogForm.button.check=\u30C1\u30A7\u30C3\u30AF
 HCatalogSchemaForm.button.retrieveSchema=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
+HCatalogSchemaForm.button.addSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u8FFD\u52A0
+HCatalogSchemaForm.button.removeSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u524A\u9664
+HCatalogSchemaForm.group.schema.title=\u30B9\u30AD\u30FC\u30DE
 HCatalogSchemaForm.tableNavigator.tableColumn=\u30C6\u30FC\u30D6\u30EB
+HCatalogSchemaForm.title.confirmChange=\u5909\u66F4\u3092\u78BA\u8A8D\u3057\u307E\u3059\u304B?
+HCatalogSchemaForm.msg.deleteSchema=\u3053\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u524A\u9664\u3057\u3066\u3082\u5B9C\u3057\u3044\u3067\u3059\u304B\uFF1F
 HCatalogSchemaForm.check.tableNameIsEmpty=\u30B9\u30AD\u30FC\u30DE\u540D\u3092\u5B9A\u7FA9\u3057\u3066\u4E0B\u3055\u3044
 HCatalogSchemaForm.check.tableNameIsExist=\u540D\u524D"{0}"\u304C\u91CD\u8907\u3057\u3066\u3044\u307E\u3059
 HCatalogSchemaForm.check.tableNameIsInvalid=\u540D\u524D\u306B\u4E0D\u6B63\u6587\u5B57\u304C\u542B\u307E\u308C\u307E\u3059\uFF1A{0}
 CreateHCatalogSchemaAction.createLabel=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
+CreateHCatalogSchemaAction.editLabel=\u30B9\u30AD\u30FC\u30DE\u306E\u7DE8\u96C6
 CreateHCatalogSchemaAction.checkConnection=HCatalog\u63A5\u7D9A\u3092\u78BA\u8A8D\u4E2D...
