--- a/org.talend.repository.hdfs.nl/src/messages_ja.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_ja.properties
@@ -1,5 +1,6 @@
 HDFSWizard.windowTitle=HDFS\u63A5\u7D9A\u5B9A\u7FA9
 HDFSWizardPage.titleCreate.Step1=\u65B0\u898FHDFS\u63A5\u7D9A\u3092\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u8FFD\u52A0 - \u30B9\u30C6\u30C3\u30D7 1/2
+HDFSWizardPage.descriptionCreate.Step1=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u5B9A\u7FA9
 HDFSWizardPage.titleCreate.Step2=\u65B0\u898FHDFS\u63A5\u7D9A\u3092\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u8FFD\u52A0 - \u30B9\u30C6\u30C3\u30D7 2/2
 HDFSWizardPage.titleUpdate.Step1=HDFS\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30C6\u30C3\u30D7 1/2
 HDFSWizardPage.titleUpdate.Step2=HDFS\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30C6\u30C3\u30D7 2/2
@@ -7,6 +8,21 @@ HDFSSchemaWizardPage.descriptionCreate=\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u65B
 HDFSSchemaWizardPage.descriptionUpdate=\u30EA\u30DD\u30B8\u30C8\u30EA\u5185\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u66F4\u65B0\u3057\u307E\u3059\u3002
 AbstractHDFSForm.checkConnection.failure.msg=\u63A5\u7D9A\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002HDFS\u3078\u306E\u8A2D\u5B9A\u3092\u5909\u66F4\u3057\u3066\u4E0B\u3055\u3044\u3002
 HDFSFileSelectorForm.selectFiles=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u53D6\u5F97\u3057\u3066\u30C6\u30FC\u30D6\u30EB\u3092\u9078\u629E
+HDFSFileSelectorForm.nameFilter.tooltip=\u30BF\u30A4\u30D7\u540D\u306E\u63A5\u982D\u8A9E\u3001\u3042\u308B\u3044\u306F\u30D1\u30BF\u30FC\u30F3(*\u3001?\u3001\u3042\u308B\u3044\u306Fcamel case)\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+HDFSFileSelectorForm.button.selectAll=\u3059\u3079\u3066\u9078\u629E
+HDFSFileSelectorForm.button.selectNone=\u4F55\u3082\u9078\u629E\u3055\u308C\u3066\u3044\u307E\u305B\u3093
+HDFSFileSelectorForm.Pending=\u30DA\u30F3\u30C7\u30A3\u30F3\u30B0
+HDFSFileSelectorForm.title.success=\u6210\u529F
+HDFSForm.rowSeparator=\u30ed\u30a6\u30bb\u30d1\u30ec\u30fc\u30bf
+HDFSForm.fieldSeparator=\u30D5\u30A3\u30FC\u30EB\u30C9\u30BB\u30D1\u30EC\u30FC\u30BF
 HDFSSchemaForm.button.retrieveSchema=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
+HDFSSchemaForm.button.addSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u8FFD\u52A0
+HDFSSchemaForm.button.removeSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u524A\u9664
+HDFSSchemaForm.group.schema.title=\u30B9\u30AD\u30FC\u30DE
+HDFSSchemaForm.title.confirmChange=\u5909\u66F4\u3092\u78BA\u8A8D\u3057\u307E\u3059\u304B?
+HDFSSchemaForm.msg.deleteSchema=\u3053\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u524A\u9664\u3057\u3066\u3082\u5B9C\u3057\u3044\u3067\u3059\u304B\uFF1F
+HDFSSchemaForm.check.tableNameIsExist=\u3053\u306E\u540D\u524D\u306F\u3059\u3067\u306B\u5B58\u5728\u3059\u308B "{0}" \u3067\u3059
 CreateHDFSSchemaAction.createLabel=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
+CreateHDFSSchemaAction.editLabel=\u30B9\u30AD\u30FC\u30DE\u306E\u7DE8\u96C6
 HDFSFileSelectorForm.schemaTree.sizeColumn=\u30B5\u30A4\u30BA
+HDFSSchemaForm.button.guessSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u63A8\u5B9A
