TDI-25595 : babili update for 5.3.0
git-svn-id: http://talendforge.org/svn/tos/trunk@101595 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler.nl/src/messages_de.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_de.properties
@@ -12,3 +12,6 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=Tag
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_WEEK=Woche
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MONTH=Monat
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=Keine
+TOozieUIConstants_LBL_version_group=Version
+TOozieUIConstants_LBL_connection_group=Verbindung
+ExecuteJobComposite.Server=Server
