--- a/org.talend.oozie.scheduler.nl/src/messages_fr.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_fr.properties
@@ -36,3 +36,7 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MONTH=mois
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_DAY=fin du jour
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_MONTH=fin du mois
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=Aucune
+TOozieUIConstants_LBL_version_group=Version
+TOozieUIConstants_LBL_connection_group=Connexion
+TOozieUIConstants_LBL_hadoop_version=Version d'Hadoop
+ExecuteJobComposite.Server=Serveur
