--- a/org.talend.oozie.scheduler.nl/src/messages_ja.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_ja.properties
@@ -1,3 +1,4 @@
+TOozieCommonConstants_OS_windows_name_prefix=Windows
 TOozieUIConstants_BTN_monitoring=\u76E3\u8996
 TOozieUIConstants_LBL_Path=\u30D1\u30B9
 TOozieUIConstants_LBL_Frequency=\u56DE\u6570
@@ -13,3 +14,13 @@ TOozieUIConstants_DLG_setting_title=\u30B0\u30ED\u30FC\u30D0\u30EB\u8A2D\u5B9A
 TOozieUIConstants_DLG_date_error_title=\u65E5\u4ED8\u30A8\u30E9\u30FC
 TOozieUIConstants_DLG_date_error_endLessStart=\u7D42\u4E86\u6642\u9593\u306F\u958B\u59CB\u6642\u9593\u3088\u308A\u5F8C\u306B\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044\uFF01
 TOozieUIConstants_DLG_date_error_startGreaterEnd=\u958B\u59CB\u6642\u9593\u306F\u7D42\u4E86\u6642\u9593\u3088\u308A\u524D\u306B\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044\uFF01
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_HOUR=\u6642
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=\u65E5
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_WEEK=\u9031
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MONTH=\u6708
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=\u306A\u3057
+TOozieUIConstants_LBL_version_group=\u30D0\u30FC\u30B8\u30E7\u30F3
+TOozieUIConstants_LBL_connection_group=\u63A5\u7D9A
+TOozieUIConstants_LBL_hadoop_distribution=Hadoop\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3
+TOozieUIConstants_LBL_hadoop_version=Hadoop\u30D0\u30FC\u30B8\u30E7\u30F3
+ExecuteJobComposite.Server=\u30B5\u30FC\u30D0
