bug TDI-25849 fixed : HDFS metadata Retrieval focus/update another MetadataStructure than the one retrieving.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@102530 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/src/messages.properties
+++ b/org.talend.repository.hdfs/src/messages.properties
@@ -59,6 +59,7 @@ HDFSSchemaForm.button.addSchema=Add Schema
 HDFSSchemaForm.button.removeSchema=Remove Schema
 HDFSSchemaForm.text.name=Name
 HDFSSchemaForm.text.comment=Comment
+HDFSSchemaForm.text.baseFilePath=Base on file
 HDFSSchemaForm.group.schema.title=Schema
 HDFSSchemaForm.tableNavigator.tableColumn=Table
 HDFSSchemaForm.title.confirm=Confirm
