i18n: synchronize Babili strings exported on 2013-05-17-12-20-18
git-svn-id: http://talendforge.org/svn/tos/trunk@102937 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.hdfsbrowse.nl/src/messages_ja.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_ja.properties
@@ -1,1 +1,1 @@
-HDFSBrowseDialog.button.collapseAll=\u3059\u3079\u3066\u6298\u308A\u305F\u305F\u3080
+HDFSBrowseDialog.button.collapseAll=\u5168\u3066\u6298\u308A\u7573\u3080
