--- a/org.talend.oozie.scheduler.nl/src/messages_en.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_en.properties
@@ -55,3 +55,4 @@ ExecuteJobComposite.fromRepository=From repository
 ExecuteJobComposite.fromPreferences=From preferences
 ExecuteJobComposite.fromRepositorytoolTip=Select a model to load oozie
 ExecuteJobComposite.Server=Server
+TOozieUIConstants_DLG_setting_title1=Oozie Settings
