--- a/org.talend.oozie.scheduler.nl/src/messages_ja.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_ja.properties
@@ -14,6 +14,9 @@ TOozieUIConstants_DLG_setting_title=\u30B0\u30ED\u30FC\u30D0\u30EB\u8A2D\u5B9A
 TOozieUIConstants_DLG_date_error_title=\u65E5\u4ED8\u30A8\u30E9\u30FC
 TOozieUIConstants_DLG_date_error_endLessStart=\u7D42\u4E86\u6642\u9593\u306F\u958B\u59CB\u6642\u9593\u3088\u308A\u5F8C\u306B\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044\uFF01
 TOozieUIConstants_DLG_date_error_startGreaterEnd=\u958B\u59CB\u6642\u9593\u306F\u7D42\u4E86\u6642\u9593\u3088\u308A\u524D\u306B\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044\uFF01
+TOozieOutputMessages_MSG_output_job_kill=\u30B8\u30E7\u30D6\u5F37\u5236\u7D42\u4E86
+TOozieOutputMessages_MSG_warning_url_title=URL\u8B66\u544A
+TOozieOutputMessages_MSG_error_settings=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FC\u306E\u30A8\u30F3\u30C9\u30DD\u30A4\u30F3\u30C8\u307E\u305F\u306FOozie\u306E\u30A8\u30F3\u30C9\u30DD\u30A4\u30F3\u30C8\u304C\u6B63\u3057\u3044\u304B\u30C1\u30A7\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\uFF01
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_HOUR=\u6642
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=\u65E5
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_WEEK=\u9031
