bug TDI-25119 fixed : click the tab:Monitoring, it will throw an exception for Oozie View
git-svn-id: http://talendforge.org/svn/tos/trunk@103230 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -64,6 +64,7 @@ ExecuteJobComposite.fromPreferences=From preferences
 ExecuteJobComposite.fromRepositorytoolTip=Select a model to load oozie
 ExecuteJobComposite.Server=Server
 
+OozieMonitoringComposite.linkText=No mozilla support detected for the browser, monitoring unavailable.\n Please open the link manually: <a href=" {0} "> {1} </a>
 
 
 
