TDI-26219 : update babili for plugins (except components)
git-svn-id: http://talendforge.org/svn/tos/trunk@103515 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler.nl/src/messages_fr.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_fr.properties
@@ -39,4 +39,7 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=Aucune
 TOozieUIConstants_LBL_version_group=Version
 TOozieUIConstants_LBL_connection_group=Connexion
 TOozieUIConstants_LBL_hadoop_version=Version d'Hadoop
+ExecuteJobComposite.fromRepository=Depuis le référentiel
+ExecuteJobComposite.fromPreferences=Depuis les préférences
+ExecuteJobComposite.fromRepositorytoolTip=Sélectionner un modèle pour charger Oozie
 ExecuteJobComposite.Server=Serveur
