TDI-26219 : update babili for plugins (except components)
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@103515 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
@@ -1,6 +1,6 @@
 HadoopClusterWizard.windowTitle=Hadoop Cluster Connection
 HadoopClusterWizard.persistenceException=Access to the data failure
-HadoopClusterWizard.save.exception=Error when save the hadoop connection: {0}
+HadoopClusterWizard.save.exception=Error when saving the Hadoop connection: {0}
 HadoopClusterWizardPage.titleCreate.Step1=New Hadoop Cluster Connection on repository - Step 1/2
 HadoopClusterWizardPage.descriptionCreate.Step1=Define the properties
 HadoopClusterWizardPage.titleCreate.Step2=New Hadoop Cluster Connection on repository - Step 2/2
