--- a/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -1,7 +1,13 @@
+HadoopClusterWizard.windowTitle=Connexion au cluster Hadoop
 HadoopClusterWizard.persistenceException=Echec de l'accès aux données
+HadoopClusterWizard.save.exception=Erreur lors de la sauvegarde de la connexion Hadoop : {0}
+HadoopClusterWizardPage.titleCreate.Step1=Nouvelle connexion au cluster Hadoop dans le référentiel - Etape 1/2
 HadoopClusterWizardPage.descriptionCreate.Step1=Configurer les propriétés
+HadoopClusterWizardPage.titleCreate.Step2=Nouvelle connexion au cluster Hadoop dans le référentiel - Etape 2/2
 HadoopClusterWizardPage.descriptionCreate.Step2=Définir les paramètres de connexion
+HadoopClusterWizardPage.titleUpdate.Step1=Mettre à jour la connexion au cluster Hadoop - Etape 1/2
 HadoopClusterWizardPage.descriptionUpdate.Step1=Mettre à jour des propriétés
+HadoopClusterWizardPage.titleUpdate.Step2=Mettre à jour la connexion au cluster Hadoop - Etape 2/2
 HadoopClusterWizardPage.descriptionUpdate.Step2=Mettre à jour les paramètres de connexion
 HadoopClusterSchemaWizard.persistenceException=Echec de l'accès aux données
 HadoopClusterForm.versionSettings=Version
@@ -11,15 +17,27 @@ HadoopClusterForm.version=Version
 HadoopClusterForm.version.tooltip=Configurer la version de la distribution
 HadoopClusterForm.connectionSettings=Connexion
 HadoopClusterForm.text.namenodeURI=URI du NameNode
+HadoopClusterForm.text.jobtrackerURI=URI du Jobtracker
 HadoopClusterForm.button.kerberos=Activer la sécurité Kerberos
+HadoopClusterForm.text.principal=Principal
+HadoopClusterForm.text.userName=Utilisateur
 HadoopClusterForm.text.group=Group
 HadoopClusterForm.check.distribution=La distribution doit être spécifiée
 HadoopClusterForm.check.version=La version doit être spécifiée
 HadoopClusterForm.check.namenodeURI=L'URI du NameNode doit être spécifiée
+HadoopClusterForm.check.jobtrackerURI=L'URI du Jobtracker doit être spécifiée
 HadoopClusterForm.check.principal=Le Principal doit être spécifié
 HadoopClusterForm.check.userName=L'utilisateur doit être spécifié
 HadoopClusterForm.check.group=Le groupe doit être spécifié
 EditHadoopClusterPropertiesAction.editLabel=Editer les propriétés
 EditHadoopClusterPropertiesAction.tooltip=Editer les propriétés
+CreateHadoopNodeAction.createLabel=Créer {0}
+CreateHadoopNodeAction.editLabel=Editer {0}
+CreateHadoopNodeAction.openLabel=Ouvrir {0}
+AbstractHadoopClusterMigrationTask.errorMsg=Echec de la tâche de migration du cluster Hadoop
 HadoopClusterForm.customSettings=Custom
 HadoopClusterForm.authentication=Authentification
+HadoopClusterForm.authentication.tooltip=Configurer le mode d'authentifiaction
+HadoopClusterForm.check.namenodeURI.invalid=L'URI du NameNode est invalide
+HadoopClusterForm.check.jobtrackerURI.invalid=L'URI du Jobtracker est invalide
+HadoopClusterForm.check.group.invalid=Le groupe est invalide
