--- a/org.talend.repository.hcatalog.nl/src/messages_fr.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_fr.properties
@@ -29,7 +29,7 @@ HCatalogTableSelectorForm.title.success=Succès
 HCatalogTableSelectorForm.tableIsExist=Un autre "{0}" existe déjà dans "{1}", l'écraser ?
 HCatalogTableSelectorForm.AchieveSchema=Finition du schéma HCatalog...
 HCatalogForm.templetonSettings=Paramètres de Templeton
-HCatalogForm.text.host=Hôte
+HCatalogForm.text.host=Nom d'hôte
 HCatalogForm.text.port=Port
 HCatalogForm.check.host=L'hôte doit être spécifié
 HCatalogForm.check.port=Le port doit être spécifié
@@ -56,3 +56,8 @@ CreateHCatalogSchemaAction.editLabel=Editer le schéma
 CreateHCatalogSchemaAction.connectionFailure.detailMsg=Impossible de se connecter à HCatalog. Vérifiez les paramètres de connexion.
 CreateHCatalogSchemaAction.checkConnection=Vérifier la connexion HCatalog...
 HCatalogRepositoryContentHandler.partitions=Partitions
+HCatalogForm.check.host.invalid=Hôte invalide
+HCatalogForm.check.port.invalid=Port invalide
+HCatalogForm.check.userName.invalid=Utilisateur invalide
+HCatalogForm.check.krbPrincipal.invalid=Principal invalide
+HCatalogForm.check.database.invalid=Base de données invalide
