--- a/org.talend.repository.hadoopcluster.nl/src/messages_ja.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_ja.properties
@@ -7,6 +7,17 @@ HadoopClusterSchemaWizard.persistenceException=\u30C7\u30FC\u30BF\u3078\u306E\u3
 HadoopClusterForm.text.namenodeURI=NameNode URI
 HadoopClusterForm.text.userName=\u30E6\u30FC\u30B6\u30FC\u540D
 HadoopClusterForm.text.group=\u30B0\u30EB\u30FC\u30D7
+HadoopClusterForm.check.distribution=\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HadoopClusterForm.check.version=Version\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HadoopClusterForm.check.jobtrackerURI=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FCURI\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HadoopClusterForm.check.userName=\u30E6\u30FC\u30B6\u540D\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HadoopClusterForm.check.group=\u30B0\u30EB\u30FC\u30D7\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
 EditHadoopClusterPropertiesAction.editLabel=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u7DE8\u96C6
 EditHadoopClusterPropertiesAction.tooltip=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u7DE8\u96C6
+CreateHadoopNodeAction.createLabel={0} \u3092\u4F5C\u6210
+CreateHadoopNodeAction.editLabel={0} \u3092\u7DE8\u96C6
+CreateHadoopNodeAction.openLabel={0} \u3092\u958B\u304F
+AbstractHadoopClusterMigrationTask.errorMsg=Hadoop Cluster\u306E\u79FB\u884C\u30BF\u30B9\u30AF\u306E\u5B9F\u884C\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
 HadoopClusterForm.customSettings=\u30AB\u30B9\u30BF\u30E0
+HadoopClusterForm.authentication=\u8A8D\u8A3C
+HadoopClusterForm.check.authentication=\u8A3C\u660E\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
