--- a/org.talend.repository.hcatalog.nl/src/messages_nl.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_nl.properties
@@ -1,1 +1,3 @@
-HCatalogForm.version=Versie
+HCatalogTableSelectorForm.schemaTree.nameColumn=Naam
+HCatalogSchemaForm.text.name=Naam
+HCatalogSchemaForm.text.comment=Opmerking
