--- a/org.talend.repository.hcatalog.nl/src/messages_ru.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_ru.properties
@@ -8,10 +8,12 @@ HCatalogSchemaWizardPage.titleUpdate=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\
 HCatalogSchemaWizard.persistenceException=\u041E\u0448\u0438\u0431\u043A\u0430 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0434\u0430\u043D\u043D\u044B\u043C
 AbstractHCatalogForm.checkConnection.success.title=\u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u0435
 HCatalogTableSelectorForm.schemaTree.nameColumn=\u0418\u043C\u044F
+HCatalogTableSelectorForm.schemaTree.typeColumn=\u0422\u0438\u043F
 HCatalogTableSelectorForm.schemaTree.numberColumn=\u041D\u043E\u043C\u0435\u0440 \u0441\u0442\u043E\u043B\u0431\u0446\u0430
 HCatalogTableSelectorForm.button.selectAll=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0432\u0441\u0435
 HCatalogTableSelectorForm.button.checkConnection=\u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u0435
 HCatalogTableSelectorForm.title.confirm=\u041F\u043E\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
+HCatalogTableSelectorForm.title.success=\u0423\u0441\u043F\u0435\u0448\u043D\u043E
 HCatalogForm.text.host=\u0418\u043C\u044F \u0445\u043E\u0442\u0441\u0430
 HCatalogForm.text.port=\u041F\u043E\u0440\u0442
 HCatalogForm.text.userName=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
@@ -21,6 +23,8 @@ HCatalogSchemaForm.button.retrieveSchema=\u0412\u043E\u0441\u0441\u0442\u0430\u0
 HCatalogSchemaForm.button.addSchema=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0445\u0435\u043C\u0443
 HCatalogSchemaForm.text.name=\u0418\u043C\u044F
 HCatalogSchemaForm.text.comment=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+HCatalogSchemaForm.group.schema.title=\u0421\u0445\u0435\u043C\u0430
+HCatalogSchemaForm.tableNavigator.tableColumn=\u0422\u0430\u0431\u043B\u0438\u0446\u0430
 HCatalogSchemaForm.title.confirm=\u041F\u043E\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
 HCatalogSchemaForm.title.confirmChange=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0430\u0435\u0442\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F?
 CreateHCatalogSchemaAction.createLabel=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C \u0441\u0445\u0435\u043C\u0443
