--- a/org.talend.repository.hdfs.nl/src/messages_nl.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_nl.properties
@@ -1,1 +1,3 @@
-HDFSForm.version=Versie
+HDFSFileSelectorForm.schemaTree.nameColumn=Naam
+HDFSSchemaForm.text.name=Naam
+HDFSSchemaForm.text.comment=Opmerking
