--- a/org.talend.repository.oozie.nl/src/messages_ja.properties
+++ b/org.talend.repository.oozie.nl/src/messages_ja.properties
@@ -1,6 +1,9 @@
 AbstractOozieForm.checkConnection=\u63A5\u7D9A\u306E\u30C1\u30A7\u30C3\u30AF
+AbstractOozieForm.connectionFailure=\u63A5\u7D9A\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002HDFS\u3092\u5909\u66F4\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 AbstractOozieForm.connectionSuccessful=\u63A5\u7D9A\u304C\u6210\u529F\u3057\u307E\u3057\u305F\u3002
+AbstractOozieForm.endPointInvalid=\u63A5\u7D9A\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002end point\u304C\u4E0D\u6B63\u3067\u3059\u3002
 OozieForm.check=\u30C1\u30A7\u30C3\u30AF
+OozieForm.connectionSetting=\u63A5\u7D9A\u8A2D\u5B9A
 OozieForm.userName=\u30E6\u30FC\u30B6\u30FC\u540D
 OozieWizard.descriptionStep1=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u5B9A\u7FA9
 OozieWizard.persistenceException=\u30C7\u30FC\u30BF\u3078\u306E\u30A2\u30AF\u30BB\u30B9\u5931\u6557
