TDQ-7104 handle duplicate keys: removed when duplicate + fix the missing key in swtbot.properties
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@103523 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.oozie.nl/src/messages_swtbot.properties
+++ b/org.talend.repository.oozie.nl/src/messages_swtbot.properties
@@ -5,6 +5,7 @@ AbstractOozieForm.endPointInvalid=Connection failure. The end point is invalid
 OozieForm.check=Check
 OozieForm.connectionSetting=Connection Settings
 OozieForm.endPoint=End Point
+OozieForm.endPointInvalid=End Point must be specified
 OozieForm.endPointInvalid.invalid=End Point is invalid
 OozieForm.nameInvalid=User name must be specified
 OozieForm.nameInvalid.invalid=User name is invalid
