bug TDI-26034 fixed : Job name can not be "fr"
git-svn-id: http://talendforge.org/svn/tos/trunk@105941 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/src/main/java/messages.properties
+++ b/org.talend.repository.pigudf/src/main/java/messages.properties
@@ -10,3 +10,7 @@ EditPigudfAction.toolTipText.editRoutine=Edit Pig UDF
 ReadPigudfAction.toolTipText.readRoutine=Read Pig UDF
 ReadPigudfAction.text.readRoutine=Read Pig UDF
 NewPigudfWizardPage.TemplateFormatError=Please select a template
+PropertiesWizardPage.ItemExistsError=This item already exists. Check the Recycle bin and empty it if needed.
+PropertiesWizardPage.KeywordsError=Name is not a valid identifier.
+PropertiesWizardPage.NameEmptyError=Name is empty.
+PropertiesWizardPage.NameFormatError=Name contains incorrect characters.
