feature TDI-26870 added: Handle headers in HDFS wizard
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@106208 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/src/messages.properties
+++ b/org.talend.repository.hdfs/src/messages.properties
@@ -44,12 +44,18 @@ HDFSForm.text.userName=User name
 HDFSForm.check.userName=User name must be specified
 HDFSForm.check.rowSeparator=Row Separator must be specified
 HDFSForm.check.fieldSeparator=Field Separator must be specified
+HDFSForm.check.header=Header must be specified
 HDFSForm.check.checkConnection=You must press the Check Button to check the HDFS Setting
 HDFSForm.separatorSettings=Separator Settings
 HDFSForm.rowSeparator=Row Separator
 HDFSForm.rowSeparator.tooltip=Set the row separator
 HDFSForm.fieldSeparator=Field Separator
 HDFSForm.fieldSeparator.tooltip=Set the field separator
+
+HDFSForm.skipSettings=Rows To Skip
+HDFSForm.skipSettings.desc=If any rows must be ignored, specify the following parameters
+HDFSForm.text.header=Header
+HDFSForm.button.firstRowsIsCaption=Set heading row as column names
 
 HDFSSchemaForm.button.retrieveSchema=Retrieve Schema
 HDFSSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema..
