feature TDI-26867 added : Update Wizards for Hadoop 2
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@107941 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/org.talend.repository.hadoopcluster/src/messages.properties
@@ -18,12 +18,14 @@ HadoopClusterForm.distribution=Distribution
 HadoopClusterForm.distribution.tooltip=Set the hadoop distribution
 HadoopClusterForm.version=Version
 HadoopClusterForm.version.tooltip=Set the distribution version
+HadoopClusterForm.useYarn=Use Yarn
 HadoopClusterForm.customSettings=Custom
 HadoopClusterForm.authentication=Authentication
 HadoopClusterForm.authentication.tooltip=Set the authentication mode
 HadoopClusterForm.connectionSettings=Connection
 HadoopClusterForm.text.namenodeURI=Namenode URI
 HadoopClusterForm.text.jobtrackerURI=Jobtracker URI
+HadoopClusterForm.text.resourceManager=Resource Manager
 HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.principal=Principal
 HadoopClusterForm.text.userName=User name
@@ -33,8 +35,8 @@ HadoopClusterForm.check.version=Version must be specified
 HadoopClusterForm.check.authentication=Authentication must be specified
 HadoopClusterForm.check.namenodeURI=Namenode URI must be specified
 HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
-HadoopClusterForm.check.jobtrackerURI=Jobtracker URI must be specified
-HadoopClusterForm.check.jobtrackerURI.invalid=Jobtracker URI is invalid
+HadoopClusterForm.check.jobtrackerURI={0} must be specified
+HadoopClusterForm.check.jobtrackerURI.invalid={0} is invalid
 HadoopClusterForm.check.principal=Principal must be specified
 HadoopClusterForm.check.principal.invalid=Principal is invalid
 HadoopClusterForm.check.userName=User name must be specified
