TDI-27567 : babili update
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@108500 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog.nl/src/messages_ja.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_ja.properties
@@ -44,7 +44,7 @@ HCatalogForm.databaseSettings=DB\u8A2D\u5B9A
 HCatalogForm.text.database=DB
 HCatalogForm.button.check=\u30C1\u30A7\u30C3\u30AF
 HCatalogSchemaForm.button.retrieveSchema=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
-HCatalogSchemaForm.button.retrieveSchema.tooltip=\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u3066\u524A\u9664\u3055\u308C\u305F\u30B9\u30AD\u30FC\u30DE\u3092\u53D6\u5F97
+HCatalogSchemaForm.button.retrieveSchema.tooltip=\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u3066\u8A73\u7D30\u306A\u30B9\u30AD\u30FC\u30DE\u3092\u53D6\u5F97
 HCatalogSchemaForm.button.addSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u8FFD\u52A0
 HCatalogSchemaForm.button.removeSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u524A\u9664
 HCatalogSchemaForm.group.schema.title=\u30B9\u30AD\u30FC\u30DE
