--- a/org.talend.repository.hdfs.nl/src/messages_en.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_en.properties
@@ -67,3 +67,9 @@ CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
 HDFSFileSelectorForm.schemaTree.sizeColumn=Size
 HDFSSchemaForm.button.guessSchema=Guess Schema
 HDFSSchemaForm.button.guessSchema.tooltip=Press this button to guess a detailed schema..
+HDFSSchemaForm.text.baseFilePath=Base on file
+HDFSForm.check.header=Header must be specified
+HDFSForm.skipSettings=Rows To Skip
+HDFSForm.skipSettings.desc=If any rows must be ignored, specify the following parameters
+HDFSForm.text.header=Header
+HDFSForm.button.firstRowsIsCaption=Set heading row as column names
