--- a/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -2,11 +2,11 @@ HadoopClusterWizard.windowTitle=Connexion au cluster Hadoop
 HadoopClusterWizard.persistenceException=Echec de l'accès aux données
 HadoopClusterWizard.save.exception=Erreur lors de la sauvegarde de la connexion Hadoop : {0}
 HadoopClusterWizardPage.titleCreate.Step1=Nouvelle connexion au cluster Hadoop dans le référentiel - Etape 1/2
-HadoopClusterWizardPage.descriptionCreate.Step1=Configurer les propriétés
+HadoopClusterWizardPage.descriptionCreate.Step1=Définissez les propriétés
 HadoopClusterWizardPage.titleCreate.Step2=Nouvelle connexion au cluster Hadoop dans le référentiel - Etape 2/2
 HadoopClusterWizardPage.descriptionCreate.Step2=Définir les paramètres de connexion
 HadoopClusterWizardPage.titleUpdate.Step1=Mettre à jour la connexion au cluster Hadoop - Etape 1/2
-HadoopClusterWizardPage.descriptionUpdate.Step1=Mettre à jour des propriétés
+HadoopClusterWizardPage.descriptionUpdate.Step1=Mettre à jour les propriétés
 HadoopClusterWizardPage.titleUpdate.Step2=Mettre à jour la connexion au cluster Hadoop - Etape 2/2
 HadoopClusterWizardPage.descriptionUpdate.Step2=Mettre à jour les paramètres de connexion
 HadoopClusterSchemaWizard.persistenceException=Echec de l'accès aux données
@@ -17,7 +17,7 @@ HadoopClusterForm.version=Version
 HadoopClusterForm.version.tooltip=Configurer la version de la distribution
 HadoopClusterForm.connectionSettings=Connexion
 HadoopClusterForm.text.namenodeURI=URI du NameNode
-HadoopClusterForm.text.jobtrackerURI=URI du Jobtracker
+HadoopClusterForm.text.jobtrackerURI=URI du JobTracker
 HadoopClusterForm.button.kerberos=Activer la sécurité Kerberos
 HadoopClusterForm.text.principal=Principal
 HadoopClusterForm.text.userName=Utilisateur
@@ -30,7 +30,7 @@ HadoopClusterForm.check.principal=Le Principal doit être spécifié
 HadoopClusterForm.check.userName=L'utilisateur doit être spécifié
 HadoopClusterForm.check.group=Le groupe doit être spécifié
 EditHadoopClusterPropertiesAction.editLabel=Editer les propriétés
-EditHadoopClusterPropertiesAction.tooltip=Editer les propriétés
+EditHadoopClusterPropertiesAction.tooltip=Modifier les propriétés
 CreateHadoopNodeAction.createLabel=Créer {0}
 CreateHadoopNodeAction.editLabel=Editer {0}
 CreateHadoopNodeAction.openLabel=Ouvrir {0}
@@ -38,6 +38,9 @@ AbstractHadoopClusterMigrationTask.errorMsg=Echec de la tâche de migration du cl
 HadoopClusterForm.customSettings=Custom
 HadoopClusterForm.authentication=Authentification
 HadoopClusterForm.authentication.tooltip=Configurer le mode d'authentifiaction
+HadoopClusterForm.check.authentication=L'authentification doit être spécifiée
 HadoopClusterForm.check.namenodeURI.invalid=L'URI du NameNode est invalide
 HadoopClusterForm.check.jobtrackerURI.invalid=L'URI du Jobtracker est invalide
+HadoopClusterForm.check.principal.invalid=Le Principal est invalide
+HadoopClusterForm.check.userName.invalid=L'utilisateur est invalide
 HadoopClusterForm.check.group.invalid=Le groupe est invalide
