--- a/org.talend.repository.hdfs.nl/src/messages_ja.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_ja.properties
@@ -6,6 +6,7 @@ HDFSWizardPage.titleUpdate.Step1=HDFS\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30
 HDFSWizardPage.titleUpdate.Step2=HDFS\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30C6\u30C3\u30D7 2/2
 HDFSSchemaWizardPage.descriptionCreate=\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u65B0\u898F\u30B9\u30AD\u30FC\u30DE\u3092\u8FFD\u52A0
 HDFSSchemaWizardPage.descriptionUpdate=\u30EA\u30DD\u30B8\u30C8\u30EA\u5185\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u66F4\u65B0\u3057\u307E\u3059\u3002
+AbstractHDFSForm.checkConnection.success.title=\u63A5\u7D9A\u78BA\u8A8D
 AbstractHDFSForm.checkConnection.success.msg="{0}" \u63A5\u7D9A\u306B\u6210\u529F\u3057\u307E\u3057\u305F\u3002
 AbstractHDFSForm.checkConnection.failure.msg=\u63A5\u7D9A\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002HDFS\u3078\u306E\u8A2D\u5B9A\u3092\u5909\u66F4\u3057\u3066\u4E0B\u3055\u3044\u3002
 HDFSFileSelectorForm.selectFiles=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u53D6\u5F97\u3057\u3066\u30C6\u30FC\u30D6\u30EB\u3092\u9078\u629E
@@ -13,16 +14,28 @@ HDFSFileSelectorForm.nameFilter.tooltip=\u30BF\u30A4\u30D7\u540D\u306E\u63A5\u98
 HDFSFileSelectorForm.button.selectAll=\u3059\u3079\u3066\u9078\u629E
 HDFSFileSelectorForm.button.selectNone=\u4F55\u3082\u9078\u629E\u3055\u308C\u3066\u3044\u307E\u305B\u3093
 HDFSFileSelectorForm.Pending=\u30DA\u30F3\u30C7\u30A3\u30F3\u30B0
+HDFSFileSelectorForm.fetchChildren=\u5B50\u30B8\u30E7\u30D6\u306E\u53D6\u5F97
 HDFSFileSelectorForm.title.success=\u6210\u529F
+HDFSFileSelectorForm.tableIsExist="{0}"\u306F"{1}"\u306B\u3059\u3067\u306B\u5B58\u5728\u3057\u3066\u3044\u307E\u3059\u3002\u4E0A\u66F8\u304D\u3057\u307E\u3059\u304B\uFF1F
+HDFSFileSelectorForm.msg.connectionFailure=HDFS\u63A5\u7D9A\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002"\u63A5\u7D9A\u30C1\u30A7\u30C3\u30AF"\u3092\u62BC\u3057\u3066\u72B6\u6CC1\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 HDFSForm.connectionSettings=\u63A5\u7D9A\u8A2D\u5B9A
+HDFSForm.check.userName=\u30E6\u30FC\u30B6\u540D\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HDFSForm.check.rowSeparator=\u884C\u533A\u5207\u308A\u8A18\u53F7\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HDFSForm.check.fieldSeparator=\u30D5\u30A3\u30FC\u30EB\u30C9\u533A\u5207\u308A\u8A18\u53F7\u3092\u6307\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044
+HDFSForm.check.checkConnection=\u30C1\u30A7\u30C3\u30AF\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u3066HDFS\u8A2D\u5B9A\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044
+HDFSForm.separatorSettings=\u533A\u5207\u308A\u8A18\u53F7\u8A2D\u5B9A
 HDFSForm.rowSeparator=\u30ed\u30a6\u30bb\u30d1\u30ec\u30fc\u30bf
+HDFSForm.rowSeparator.tooltip=\u884C\u533A\u5207\u308A\u8A18\u53F7\u3092\u8A2D\u5B9A
 HDFSForm.fieldSeparator=\u30D5\u30A3\u30FC\u30EB\u30C9\u30BB\u30D1\u30EC\u30FC\u30BF
+HDFSForm.fieldSeparator.tooltip=\u30D5\u30A3\u30FC\u30EB\u30C9\u533A\u5207\u308A\u8A18\u53F7\u3092\u8A2D\u5B9A
 HDFSSchemaForm.button.retrieveSchema=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
+HDFSSchemaForm.button.retrieveSchema.tooltip=\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u3066\u8A73\u7D30\u306A\u30B9\u30AD\u30FC\u30DE\u3092\u53D6\u5F97\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 HDFSSchemaForm.button.addSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u8FFD\u52A0
 HDFSSchemaForm.button.removeSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u524A\u9664
 HDFSSchemaForm.group.schema.title=\u30B9\u30AD\u30FC\u30DE
 HDFSSchemaForm.title.confirmChange=\u5909\u66F4\u3092\u78BA\u8A8D\u3057\u307E\u3059\u304B?
 HDFSSchemaForm.msg.deleteSchema=\u3053\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u524A\u9664\u3057\u3066\u3082\u5B9C\u3057\u3044\u3067\u3059\u304B\uFF1F
+HDFSSchemaForm.msg.changeSchema=\u30B9\u30AD\u30FC\u30DE\u8A2D\u5B9A\u304C\u5909\u66F4\u3055\u308C\u3001\u30D7\u30EC\u30D3\u30E5\u30FC\u306B\u8868\u793A\u3055\u308C\u3066\u3044\u308B\u30B9\u30AD\u30FC\u30DE\u3068\u7570\u306A\u3063\u3066\u3044\u307E\u3059\u3002\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u65B0\u3057\u3044\u3082\u306E\u306B\u66F4\u65B0\u3057\u307E\u3059\u3002\u3088\u308D\u3057\u3044\u3067\u3059\u304B\uFF1F
 HDFSSchemaForm.check.tableNameIsExist=\u3053\u306E\u540D\u524D\u306F\u3059\u3067\u306B\u5B58\u5728\u3059\u308B "{0}" \u3067\u3059
 CreateHDFSSchemaAction.createLabel=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
 CreateHDFSSchemaAction.editLabel=\u30B9\u30AD\u30FC\u30DE\u306E\u7DE8\u96C6
@@ -30,3 +43,4 @@ CreateHDFSSchemaAction.connectionFailure.detailMsg=HDFS "{0}"\u306B\u63A5\u7D9A\
 CreateHDFSSchemaAction.checkConnection=HDFS\u63A5\u7D9A\u3092\u30C1\u30A7\u30C3\u30AF\u4E2D...
 HDFSFileSelectorForm.schemaTree.sizeColumn=\u30B5\u30A4\u30BA
 HDFSSchemaForm.button.guessSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u63A8\u5B9A
+HDFSSchemaForm.button.guessSchema.tooltip=\u3053\u306E\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u3066\u8A73\u7D30\u306A\u30B9\u30AD\u30FC\u30DE\u3092\u63A8\u5B9A..
