--- a/org.talend.repository.oozie.nl/src/messages_fr.properties
+++ b/org.talend.repository.oozie.nl/src/messages_fr.properties
@@ -8,12 +8,14 @@ OozieForm.endPoint=Endpoint
 OozieForm.endPointInvalid=Endpoint invalide
 OozieForm.nameInvalid=L'utilisateur doit être spécifié
 OozieForm.oozieVersion=Version d'Oozie
+OozieForm.userName=Utilisateur
 OozieForm.versionSetting=Paramètres de la version
 OozieForm.versionTip=Sélectionnez une version d'Oozie
-OozieWizard.descriptionStep1=Configurer les propriétés
+OozieWizard.descriptionStep1=Définissez les propriétés
 OozieWizard.descriptionStep2=Configurez les paramètres d'Oozie
 OozieWizard.oozieConnection=Connexion Oozie
 OozieWizard.persistenceException=Echec de l'accès aux données
 OozieWizard.titleStep1=Nouvelle connexion Oozie dans le référentiel - Etape 1/2
 OozieWizard.titleStep2=Nouvelle connexion Oozie dans le référentiel - Etape 2/2
 OozieForm.endPointInvalid.invalid=Endpoint invalide
+OozieForm.nameInvalid.invalid=L'utilisateur est invalide
