TDI-27567 : babili update
git-svn-id: http://talendforge.org/svn/tos/trunk@108500 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler.nl/src/messages_fr.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_fr.properties
@@ -1,5 +1,5 @@
 TOozieCommonConstants_oozie_prefix_for_preference=oozie-
-TOozieCommonConstants_OS_windows_name_prefix=Windows
+TOozieCommonConstants_OS_windows_name_prefix=WIndows
 OozieSchedulerView_Part_name_job=Oozie({0})
 OozieSchedulerView_part_title_name_nojob=Aucun Job pour Oozie
 OozieSchedulerView_Part_title_job=Oozie {0}
@@ -38,7 +38,8 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_MONTH=fin du mois
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=Aucune
 TOozieUIConstants_LBL_version_group=Version
 TOozieUIConstants_LBL_connection_group=Connexion
-TOozieUIConstants_LBL_hadoop_version=Version d'Hadoop
+TOozieUIConstants_LBL_hadoop_distribution=Distribution Hadoop
+TOozieUIConstants_LBL_hadoop_version=Version de Hadoop
 ExecuteJobComposite.fromRepository=Depuis le référentiel
 ExecuteJobComposite.fromPreferences=Depuis les préférences
 ExecuteJobComposite.fromRepositorytoolTip=Sélectionner un modèle pour charger Oozie
