--- a/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
@@ -1,6 +1,7 @@
 HDFSBrowseDialog.title=Parcourir HDFS
 HDFSBrowseDialog.desc=Sélectionnez un(e) {0}.
 HDFSBrowseDialog.column.name=Nom
+HDFSBrowseDialog.column.type=Type
 HDFSBrowseDialog.button.collapseAll=Réduire tout
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Echec de la connexion. Modifiez les paramètres de HDFS.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Impossible de se connecter à HDFS "{0}". Vérifiez les paramètres de connexion.
