--- a/org.talend.designer.hdfsbrowse.nl/src/messages_ja.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_ja.properties
@@ -1,3 +1,6 @@
+HDFSBrowseDialog.title=HDFS\u95B2\u89A7
+HDFSBrowseDialog.desc={0}\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 HDFSBrowseDialog.button.collapseAll=\u5168\u3066\u6298\u308A\u7573\u3080
+AbstractHDFSBrowseController.connectionFailure.mainMsg=\u63A5\u7D9A\u51FA\u6765\u307E\u305B\u3093\u3002HDFS\u8A2D\u5B9A\u3092\u5909\u66F4\u3057\u3066\u4E0B\u3055\u3044\u3002
 AbstractHDFSBrowseController.connectionFailure.detailMsg=HDFS "{0}"\u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002\u63A5\u7D9A\u8A2D\u5B9A\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-AbstractHDFSBrowseController.checkConnection=HDFS\u63A5\u7D9A\u3092\u30C1\u30A7\u30C3\u30AF\u4E2D...
+AbstractHDFSBrowseController.checkConnection=HDFS\u63A5\u7D9A\u3092\u78BA\u8A8D\u4E2D...
