--- a/org.talend.oozie.scheduler.nl/src/messages_en.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_en.properties
@@ -56,3 +56,4 @@ ExecuteJobComposite.fromPreferences=From preferences
 ExecuteJobComposite.fromRepositorytoolTip=Select a model to load oozie
 ExecuteJobComposite.Server=Server
 TOozieUIConstants_DLG_setting_title1=Oozie Settings
+OozieMonitoringComposite.linkText=No mozilla support detected for the browser, monitoring unavailable.\n Please open the link manually: <a href=" {0} "> {1} </a>
