--- a/org.talend.oozie.scheduler.nl/src/messages_ja.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_ja.properties
@@ -1,3 +1,4 @@
+TOozieCommonConstants_oozie_prefix_for_preference=oozie-
 TOozieCommonConstants_OS_windows_name_prefix=Windows
 TOozieUIConstants_BTN_monitoring=\u76E3\u8996
 TOozieUIConstants_LBL_Path=\u30D1\u30B9
@@ -14,9 +15,19 @@ TOozieUIConstants_DLG_setting_title=\u30B0\u30ED\u30FC\u30D0\u30EB\u8A2D\u5B9A
 TOozieUIConstants_DLG_date_error_title=\u65E5\u4ED8\u30A8\u30E9\u30FC
 TOozieUIConstants_DLG_date_error_endLessStart=\u7D42\u4E86\u6642\u9593\u306F\u958B\u59CB\u6642\u9593\u3088\u308A\u5F8C\u306B\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044\uFF01
 TOozieUIConstants_DLG_date_error_startGreaterEnd=\u958B\u59CB\u6642\u9593\u306F\u7D42\u4E86\u6642\u9593\u3088\u308A\u524D\u306B\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044\uFF01
+TOozieOutputMessages_MSG_output_startup=\u30B8\u30E7\u30D6\u306E\u30EA\u30E2\u30FC\u30C8\u5B9F\u884C\u3092\u958B\u59CB\u3057\u3066\u3044\u307E\u3059\u2026
+TOozieOutputMessages_MSG_output_deploying=\u30B8\u30E7\u30D6\u3092Hadoop\u306B\u914D\u5099\u3057\u3066\u3044\u307E\u3059\u2026
+TOozieOutputMessages_MSG_output_deployment_complete=\u914D\u5099\u304C\u5B8C\u4E86\u3057\u307E\u3057\u305F\uFF01
+TOozieOutputMessages_MSG_output_deployment_failed=\u914D\u5099\u306B\u5931\u6557\u3057\u307E\u3057\u305F\uFF01
+TOozieOutputMessages_MSG_output_job_running=\u30B8\u30E7\u30D6\u306E\u5B9F\u884C\u4E2D\u2026
+TOozieOutputMessages_MSG_output_job_prepare=\u30B8\u30E7\u30D6\u3092\u5B9F\u884C\u3059\u308B\u6E96\u5099\u3092\u3057\u3066\u3044\u307E\u3059\u2026
 TOozieOutputMessages_MSG_output_job_kill=\u30B8\u30E7\u30D6\u5F37\u5236\u7D42\u4E86
+TOozieOutputMessages_MSG_output_job_fail=\u30B8\u30E7\u30D6\u304C\u5931\u6557\u3057\u307E\u3057\u305F\uFF01
+TOozieOutputMessages_MSG_output_job_suspended=\u30B8\u30E7\u30D6\u304C\u4E2D\u65AD\u3055\u308C\u307E\u3057\u305F\uFF01
+TOozieOutputMessages_MSG_output_job_complete=\u30B8\u30E7\u30D6\u304C\u5B8C\u4E86\u3057\u307E\u3057\u305F\uFF01
 TOozieOutputMessages_MSG_warning_url_title=URL\u8B66\u544A
 TOozieOutputMessages_MSG_error_settings=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FC\u306E\u30A8\u30F3\u30C9\u30DD\u30A4\u30F3\u30C8\u307E\u305F\u306FOozie\u306E\u30A8\u30F3\u30C9\u30DD\u30A4\u30F3\u30C8\u304C\u6B63\u3057\u3044\u304B\u30C1\u30A7\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\uFF01
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MINUTE=\u5206
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_HOUR=\u6642
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=\u65E5
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_WEEK=\u9031
@@ -26,4 +37,8 @@ TOozieUIConstants_LBL_version_group=\u30D0\u30FC\u30B8\u30E7\u30F3
 TOozieUIConstants_LBL_connection_group=\u63A5\u7D9A
 TOozieUIConstants_LBL_hadoop_distribution=Hadoop\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3
 TOozieUIConstants_LBL_hadoop_version=Hadoop\u30D0\u30FC\u30B8\u30E7\u30F3
+ExecuteJobComposite.fromRepository=\u30EA\u30DD\u30B8\u30C8\u30EA
+ExecuteJobComposite.fromPreferences=\u512A\u5148\u5EA6
+ExecuteJobComposite.fromRepositorytoolTip=oozie\u3092\u30ED\u30FC\u30C9\u3059\u308B\u30E2\u30C7\u30EB\u3092\u9078\u629E
 ExecuteJobComposite.Server=\u30B5\u30FC\u30D0
+TOozieUIConstants_DLG_setting_title1=Oozie\u8A2D\u5B9A
