feature TDI-26864 added : Need GUI update for the keytab
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@108519 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/org.talend.repository.hadoopcluster/src/messages.properties
@@ -26,10 +26,14 @@ HadoopClusterForm.connectionSettings=Connection
 HadoopClusterForm.text.namenodeURI=Namenode URI
 HadoopClusterForm.text.jobtrackerURI=Jobtracker URI
 HadoopClusterForm.text.resourceManager=Resource Manager
+HadoopClusterForm.authenticationSettings=Authentication
 HadoopClusterForm.button.kerberos=Enable kerberos security
-HadoopClusterForm.text.principal=Principal
+HadoopClusterForm.text.namenodePrincipal=Namenode Principal
+HadoopClusterForm.button.keytab=Use a keytab to authenticate 
+HadoopClusterForm.text.keytabPrincipal=Principal
 HadoopClusterForm.text.userName=User name
 HadoopClusterForm.text.group=Group
+HadoopClusterForm.text.keytab=Keytab
 HadoopClusterForm.check.distribution=Distribution must be specified
 HadoopClusterForm.check.version=Version must be specified
 HadoopClusterForm.check.authentication=Authentication must be specified
@@ -37,8 +41,11 @@ HadoopClusterForm.check.namenodeURI=Namenode URI must be specified
 HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
 HadoopClusterForm.check.jobtrackerURI={0} must be specified
 HadoopClusterForm.check.jobtrackerURI.invalid={0} is invalid
-HadoopClusterForm.check.principal=Principal must be specified
-HadoopClusterForm.check.principal.invalid=Principal is invalid
+HadoopClusterForm.check.namenodePrincipal=Namenode Principal must be specified
+HadoopClusterForm.check.namenodePrincipal.invalid=Namenode Principal is invalid
+HadoopClusterForm.check.keytabPrincipal=Principal must be specified
+HadoopClusterForm.check.keytabPrincipal.invalid=Principal is invalid
+HadoopClusterForm.check.keytab=Keytab must be specified
 HadoopClusterForm.check.userName=User name must be specified
 HadoopClusterForm.check.userName.invalid=User name is invalid
 HadoopClusterForm.check.group=Group must be specified
