TDI-27756 : babili update
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@109463 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
@@ -19,14 +19,12 @@ HadoopClusterForm.connectionSettings=Connection
 HadoopClusterForm.text.namenodeURI=Namenode URI
 HadoopClusterForm.text.jobtrackerURI=Jobtracker URI
 HadoopClusterForm.button.kerberos=Enable kerberos security
-HadoopClusterForm.text.principal=Principal
 HadoopClusterForm.text.userName=User name
 HadoopClusterForm.text.group=Group
 HadoopClusterForm.check.distribution=Distribution must be specified
 HadoopClusterForm.check.version=Version must be specified
 HadoopClusterForm.check.namenodeURI=Namenode URI must be specified
 HadoopClusterForm.check.jobtrackerURI=Jobtracker URI must be specified
-HadoopClusterForm.check.principal=Principal must be specified
 HadoopClusterForm.check.userName=User name must be specified
 HadoopClusterForm.check.group=Group must be specified
 HadoopClusterForm.check.checkConnection=You must press the Check Button to check the HadoopCluster Setting
@@ -42,6 +40,17 @@ HadoopClusterForm.authentication.tooltip=Set the authentication mode
 HadoopClusterForm.check.authentication=Authentication must be specified
 HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
 HadoopClusterForm.check.jobtrackerURI.invalid=Jobtracker URI is invalid
-HadoopClusterForm.check.principal.invalid=Principal is invalid
 HadoopClusterForm.check.userName.invalid=User name is invalid
 HadoopClusterForm.check.group.invalid=Group is invalid
+HadoopClusterForm.useYarn=Use Yarn
+HadoopClusterForm.text.resourceManager=Resource Manager
+HadoopClusterForm.authenticationSettings=Authentication
+HadoopClusterForm.text.namenodePrincipal=Namenode Principal
+HadoopClusterForm.button.keytab=Use a keytab to authenticate
+HadoopClusterForm.text.keytabPrincipal=Principal
+HadoopClusterForm.text.keytab=Keytab
+HadoopClusterForm.check.namenodePrincipal=Namenode Principal must be specified
+HadoopClusterForm.check.namenodePrincipal.invalid=Namenode Principal is invalid
+HadoopClusterForm.check.keytabPrincipal=Principal must be specified
+HadoopClusterForm.check.keytabPrincipal.invalid=Principal is invalid
+HadoopClusterForm.check.keytab=Keytab must be specified
