--- a/org.talend.repository.hcatalog.nl/src/messages_de.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_de.properties
@@ -8,6 +8,7 @@ HCatalogSchemaWizardPage.descriptionCreate=Ein Schema dem Repository hinzufügen
 HCatalogSchemaWizardPage.titleUpdate=Aktualisiere Schema "{0}"
 HCatalogSchemaWizard.persistenceException=Fehler beim Zugriff auf die Daten
 AbstractHCatalogForm.checkConnection.success.title=Prüfe Verbindung
+HCatalogTableSelectorForm.schemaTree.nameColumn=Name
 HCatalogTableSelectorForm.schemaTree.typeColumn=Typ
 HCatalogTableSelectorForm.schemaTree.numberColumn=Spaltennummer
 HCatalogTableSelectorForm.schemaTree.statusColumn=Erstellungsstatus
@@ -17,10 +18,15 @@ HCatalogTableSelectorForm.button.checkConnection=Prüfe Verbindung
 HCatalogTableSelectorForm.Pending=Pending
 HCatalogTableSelectorForm.title.confirm=Bestätigen
 HCatalogTableSelectorForm.title.success=Erfolgreich
+HCatalogForm.text.port=Port
 HCatalogForm.text.userName=Benutzername
+HCatalogForm.check.database=Datenbank muss spezifiziert sein
 HCatalogForm.databaseSettings=Datenbank Einstellungen
+HCatalogForm.text.database=Datenbank
 HCatalogSchemaForm.button.retrieveSchema=Schema ermitteln
 HCatalogSchemaForm.button.addSchema=Schema hinzufügen
+HCatalogSchemaForm.button.removeSchema=Schema entfernen
+HCatalogSchemaForm.text.name=Name
 HCatalogSchemaForm.text.comment=Kommentar
 HCatalogSchemaForm.group.schema.title=Schema
 HCatalogSchemaForm.tableNavigator.tableColumn=Tabelle
@@ -28,5 +34,8 @@ HCatalogSchemaForm.title.confirm=Bestätigen
 HCatalogSchemaForm.title.confirmChange=Änderungen bestätigen ?
 HCatalogSchemaForm.msg.deleteSchema=Dieses Schema löschen - sicher?
 HCatalogSchemaForm.check.tableNameIsEmpty=Schema hat einen leeren Namen, muss festgelegt sein
+HCatalogSchemaForm.check.tableNameIsExist=Name existiert bereits "{0}"
 CreateHCatalogSchemaAction.createLabel=Schema ermitteln
 CreateHCatalogSchemaAction.editLabel=Ändere Schema
+HCatalogForm.check.userName.invalid=Benutzername ist ungültig
+HCatalogForm.check.database.invalid=Datenbank ist ungültig
