--- a/org.talend.repository.hcatalog.nl/src/messages_fr.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_fr.properties
@@ -45,7 +45,7 @@ HCatalogForm.check.checkConnection=Cliquez sur le bouton Vérifier pour vérifier 
 HCatalogForm.databaseSettings=Paramètres de la base de données
 HCatalogForm.text.database=Base de données
 HCatalogForm.button.check=Vérifier
-HCatalogSchemaForm.button.retrieveSchema=Supprimer le schéma
+HCatalogSchemaForm.button.retrieveSchema=Récupérer le schéma
 HCatalogSchemaForm.button.retrieveSchema.tooltip=Cliquez sur ce bouton pour obtenir un schéma détaillé.
 HCatalogSchemaForm.button.addSchema=Ajouter le schéma
 HCatalogSchemaForm.button.removeSchema=Supprimer le schéma
@@ -59,7 +59,7 @@ HCatalogSchemaForm.msg.deleteSchema=Etes-vous sûr de vouloir supprimer ce schéma
 HCatalogSchemaForm.check.tableNameIsEmpty=Le nom d'un schéma est vide. Il doit être spécifié.
 HCatalogSchemaForm.check.tableNameIsExist=Ce nom existe déjà "{0}"
 HCatalogSchemaForm.check.tableNameIsInvalid=Le nom contient des caractères interdits : {0}
-CreateHCatalogSchemaAction.createLabel=Supprimer le schéma
+CreateHCatalogSchemaAction.createLabel=Récupérer le schéma
 CreateHCatalogSchemaAction.editLabel=Editer le schéma
 CreateHCatalogSchemaAction.connectionFailure.mainMsg=Echec de la connexion. Modifiez les paramètres de HCatalog.
 CreateHCatalogSchemaAction.connectionFailure.detailMsg=Impossible de se connecter à HCatalog. Vérifiez les paramètres de connexion.
