--- a/org.talend.repository.hdfs.nl/src/messages_de.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_de.properties
@@ -8,6 +8,7 @@ HDFSSchemaWizardPage.descriptionCreate=Ein Schema dem Repository hinzufügen
 HDFSSchemaWizardPage.titleUpdate=Aktualisiere Schema "{0}"
 HDFSSchemaWizard.persistenceException=Fehler beim Zugriff auf die Daten
 AbstractHDFSForm.checkConnection.success.title=Prüfe Verbindung
+HDFSFileSelectorForm.schemaTree.nameColumn=Name
 HDFSFileSelectorForm.schemaTree.typeColumn=Typ
 HDFSFileSelectorForm.schemaTree.numberColumn=Spaltennummer
 HDFSFileSelectorForm.schemaTree.statusColumn=Erstellungsstatus
@@ -22,6 +23,8 @@ HDFSForm.rowSeparator=Zeilenseparator
 HDFSForm.fieldSeparator=Feldseparator
 HDFSSchemaForm.button.retrieveSchema=Schema ermitteln
 HDFSSchemaForm.button.addSchema=Schema hinzufügen
+HDFSSchemaForm.button.removeSchema=Entferne Schema
+HDFSSchemaForm.text.name=Name
 HDFSSchemaForm.text.comment=Kommentar
 HDFSSchemaForm.group.schema.title=Schema
 HDFSSchemaForm.tableNavigator.tableColumn=Tabelle
