--- a/org.talend.repository.hdfs.nl/src/messages_fr.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_fr.properties
@@ -43,7 +43,7 @@ HDFSForm.rowSeparator=Séparateur de lignes
 HDFSForm.rowSeparator.tooltip=Configurer le séparateur de lignes
 HDFSForm.fieldSeparator=Séparateur de champs
 HDFSForm.fieldSeparator.tooltip=Configurer le séparateur de champs
-HDFSSchemaForm.button.retrieveSchema=Supprimer le schéma
+HDFSSchemaForm.button.retrieveSchema=Récupérer le schéma
 HDFSSchemaForm.button.retrieveSchema.tooltip=Cliquez sur ce bouton pour obtenir un schéma détaillé.
 HDFSSchemaForm.button.addSchema=Ajouter le schéma
 HDFSSchemaForm.button.removeSchema=Supprimer le schéma
@@ -58,7 +58,7 @@ HDFSSchemaForm.msg.changeSchema=Les paramètres du schéma ont été modifiés et son
 HDFSSchemaForm.check.tableNameIsEmpty=Le nom d'un schéma est vide. Il doit être spécifié.
 HDFSSchemaForm.check.tableNameIsExist=Le nom "{0}" existe déja
 HDFSSchemaForm.check.tableNameIsInvalid=Le nom contient des caractères interdits : {0}
-CreateHDFSSchemaAction.createLabel=Supprimer le schéma
+CreateHDFSSchemaAction.createLabel=Récupérer le schéma
 CreateHDFSSchemaAction.editLabel=Editer le schéma
 CreateHDFSSchemaAction.connectionFailure.mainMsg=Echec de la connexion. Modifiez les paramètres de HDFS.
 CreateHDFSSchemaAction.connectionFailure.detailMsg=Impossible de se connecter à HDFS "{0}". Vérifiez les paramètres de connexion.
@@ -70,3 +70,4 @@ HDFSForm.check.header=L'en-tête doit être spécifié.
 HDFSForm.skipSettings=Lignes à ignorer
 HDFSForm.skipSettings.desc=Si des lignes doivent être ignorées, spécifiez les paramètres suivants
 HDFSForm.text.header=En-tête
+HDFSForm.button.firstRowsIsCaption=Configurer la ligne d'en-tête comme nom des colonnes
