--- a/org.talend.repository.hadoopcluster.nl/src/messages_de.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_de.properties
@@ -9,6 +9,11 @@ HadoopClusterForm.version=Version
 HadoopClusterForm.connectionSettings=Verbindung
 HadoopClusterForm.text.userName=Benutzername
 HadoopClusterForm.text.group=Gruppe
+HadoopClusterForm.check.version=Version muss spezifiert sein
+HadoopClusterForm.check.userName=Benutzername muss spezifiziert sein
+HadoopClusterForm.check.group=Gruppe muss spezifiert sein
 EditHadoopClusterPropertiesAction.editLabel=Eigenschaften bearbeiten
 EditHadoopClusterPropertiesAction.tooltip=Eigenschaften bearbeiten
 HadoopClusterForm.authentication=Authentifizierung
+HadoopClusterForm.check.userName.invalid=Benutzername ist ungültig
+HadoopClusterForm.check.group.invalid=Gruppe ist ungültig
