TDI-27756 : babili update
git-svn-id: http://talendforge.org/svn/tos/trunk@109463 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler.nl/src/messages_fr.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_fr.properties
@@ -44,3 +44,4 @@ ExecuteJobComposite.fromRepository=Depuis le référentiel
 ExecuteJobComposite.fromPreferences=Depuis les préférences
 ExecuteJobComposite.fromRepositorytoolTip=Sélectionner un modèle pour charger Oozie
 ExecuteJobComposite.Server=Serveur
+TOozieUIConstants_DLG_setting_title1=Paramètres Oozie
