bug TDI-27888 fixed : HCatalog:Fail to connect to hcatalog
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@110001 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/src/messages.properties
+++ b/org.talend.repository.hcatalog/src/messages.properties
@@ -38,6 +38,7 @@ HCatalogTableSelectorForm.title.success=Success
 HCatalogTableSelectorForm.tableIsExist=Another "{0}" already exist in "{1}", do you want to cover it?
 HCatalogTableSelectorForm.msg.connectionFailure="HCatalog connection failure. Please press "Check Connection" to restore the situation."
 HCatalogTableSelectorForm.AchieveSchema=Achieving HCatalog schema...
+HCatalogTableSelectorForm.cannotExtractPartitionsWarn=Cannot extract partitions from table "{0}".
 
 HCatalogForm.templetonSettings=Templeton Settings
 HCatalogForm.text.host=Host name
