TDI-28013 : For Hadoop 2.0 when defining Resource Manager, error message still says Job Tracker
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@110797 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/org.talend.repository.hadoopcluster/src/messages.properties
@@ -40,7 +40,9 @@ HadoopClusterForm.check.authentication=Authentication must be specified
 HadoopClusterForm.check.namenodeURI=Namenode URI must be specified
 HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
 HadoopClusterForm.check.jobtrackerURI={0} must be specified
+HadoopClusterForm.check.jobtrackerURI2={0} must be specified
 HadoopClusterForm.check.jobtrackerURI.invalid={0} is invalid
+HadoopClusterForm.check.jobtrackerURI.invalid2={0} is invalid
 HadoopClusterForm.check.namenodePrincipal=Namenode Principal must be specified
 HadoopClusterForm.check.namenodePrincipal.invalid=Namenode Principal is invalid
 HadoopClusterForm.check.keytabPrincipal=Principal must be specified
