--- a/org.talend.oozie.scheduler.nl/src/messages_fr.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_fr.properties
@@ -14,6 +14,7 @@ TOozieUIConstants_LBL_StartTime=Heure de début
 TOozieUIConstants_LBL_EndTime=Heure de fin
 TOozieUIConstants_LBL_OozieEndPoint=Endpoint d'Oozie
 TOozieUIConstants_LBL_userName_for_hadoop=Utilisateur
+TOozieUIConstants_DLG_scheduler_title=Ordonnancement Oozie
 TOozieUIConstants_DLG_date_error_title=Erreur de date
 TOozieUIConstants_DLG_date_error_endLessStart=Vérifiez les heures, l'"Heure de fin" ne doit pas être antérieure à l'"Heure de début".
 TOozieUIConstants_DLG_date_error_startGreaterEnd=Vérifiez les heures, l'"Heure de début" ne doit pas être postérieure à l'"Heure de fin".
@@ -28,6 +29,7 @@ TOozieOutputMessages_MSG_output_job_kill=Job arrêté.
 TOozieOutputMessages_MSG_output_job_fail=Echec du Job.
 TOozieOutputMessages_MSG_output_job_suspended=Job suspendu.
 TOozieOutputMessages_MSG_output_job_complete=Job terminé.
+TOozieOutputMessages_MSG_error_settings=Vérifiez que les endpoints du JobTracker et Oozie sont valides.
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MINUTE=minute
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_HOUR=heure
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=jour
