TDI-28267 : babili update
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@111395 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster.nl/src/messages_de.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_de.properties
@@ -14,6 +14,9 @@ HadoopClusterForm.check.userName=Benutzername muss spezifiziert sein
 HadoopClusterForm.check.group=Gruppe muss spezifiert sein
 EditHadoopClusterPropertiesAction.editLabel=Eigenschaften bearbeiten
 EditHadoopClusterPropertiesAction.tooltip=Eigenschaften bearbeiten
+CreateHadoopNodeAction.createLabel=Erstelle {0}
+CreateHadoopNodeAction.editLabel=Bearbeite {0}
+CreateHadoopNodeAction.openLabel=Öffne {0}
 HadoopClusterForm.authentication=Authentifizierung
 HadoopClusterForm.check.userName.invalid=Benutzername ist ungültig
 HadoopClusterForm.check.group.invalid=Gruppe ist ungültig
