--- a/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
@@ -39,7 +39,7 @@ HadoopClusterForm.authentication=Authentication
 HadoopClusterForm.authentication.tooltip=Set the authentication mode
 HadoopClusterForm.check.authentication=Authentication must be specified
 HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
-HadoopClusterForm.check.jobtrackerURI.invalid=Jobtracker URI is invalid
+HadoopClusterForm.check.jobtrackerURI.invalid=The URI of {0} is invalid
 HadoopClusterForm.check.userName.invalid=User name is invalid
 HadoopClusterForm.check.group.invalid=Group is invalid
 HadoopClusterForm.useYarn=Use Yarn
