--- a/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -38,6 +38,6 @@ HadoopClusterForm.authentication=Authentification
 HadoopClusterForm.authentication.tooltip=Configurer le mode d'authentifiaction
 HadoopClusterForm.check.authentication=L'authentification doit être spécifiée
 HadoopClusterForm.check.namenodeURI.invalid=L'URI du NameNode est invalide
-HadoopClusterForm.check.jobtrackerURI.invalid=L'URI du Jobtracker est invalide
+HadoopClusterForm.check.jobtrackerURI.invalid=L'URI du {0} est invalide
 HadoopClusterForm.check.userName.invalid=L'utilisateur est invalide
 HadoopClusterForm.check.group.invalid=Le groupe est invalide
