--- a/org.talend.repository.hadoopcluster.nl/src/messages_ja.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_ja.properties
@@ -41,3 +41,4 @@ HadoopClusterForm.check.namenodeURI.invalid=\u30CD\u30FC\u30E0\u30CE\u30FC\u30C9
 HadoopClusterForm.check.jobtrackerURI.invalid=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FCURI\u304C\u4E0D\u6B63\u3067\u3059
 HadoopClusterForm.check.userName.invalid=\u30E6\u30FC\u30B6\u540D\u304C\u4E0D\u6B63\u3067\u3059
 HadoopClusterForm.check.group.invalid=\u30B0\u30EB\u30FC\u30D7\u304C\u4E0D\u6B63\u3067\u3059
+HadoopClusterForm.authenticationSettings=\u8A8D\u8A3C
