--- a/org.talend.repository.hcatalog.nl/src/messages_en.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_en.properties
@@ -77,3 +77,4 @@ HCatalogForm.check.userName.invalid=User name is invalid
 HCatalogForm.check.krbPrincipal.invalid=Principal is invalid
 HCatalogForm.check.krbRealm.invalid=Realm is invalid
 HCatalogForm.check.database.invalid=Database is invalid
+HCatalogTableSelectorForm.cannotExtractPartitionsWarn=Cannot extract partitions from table "{0}".
