--- a/org.talend.repository.hdfs.nl/src/messages_de.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_de.properties
@@ -8,6 +8,8 @@ HDFSSchemaWizardPage.descriptionCreate=Ein Schema dem Repository hinzufügen
 HDFSSchemaWizardPage.titleUpdate=Aktualisiere Schema "{0}"
 HDFSSchemaWizard.persistenceException=Fehler beim Zugriff auf die Daten
 AbstractHDFSForm.checkConnection.success.title=Prüfe Verbindung
+AbstractHDFSForm.checkConnection.success.msg="{0}" Verbindung erfolgreich.
+AbstractHDFSForm.checkConnection.failure.msg=Verbindungsfehler. Sie müssen die HDFS Einstellungen ändern.
 HDFSFileSelectorForm.schemaTree.nameColumn=Name
 HDFSFileSelectorForm.schemaTree.typeColumn=Typ
 HDFSFileSelectorForm.schemaTree.numberColumn=Spaltennummer
@@ -18,6 +20,8 @@ HDFSFileSelectorForm.button.checkConnection=Prüfe Verbindung
 HDFSFileSelectorForm.Pending=Pending
 HDFSFileSelectorForm.title.confirm=Bestätigen
 HDFSFileSelectorForm.title.success=Erfolgreich
+HDFSFileSelectorForm.tableIsExist="{0}" existiert bereits in "{1}", wollen Sie "{0}" überschreiben?
+HDFSForm.connectionSettings=Verbindungseinstellungen
 HDFSForm.text.userName=Benutzername
 HDFSForm.rowSeparator=Zeilenseparator
 HDFSForm.fieldSeparator=Feldseparator
@@ -34,5 +38,7 @@ HDFSSchemaForm.msg.deleteSchema=Dieses Schema löschen - sicher?
 HDFSSchemaForm.check.tableNameIsEmpty=Schema hat einen leeren Namen, muss festgelegt sein
 CreateHDFSSchemaAction.createLabel=Schema ermitteln
 CreateHDFSSchemaAction.editLabel=Ändere Schema
+CreateHDFSSchemaAction.connectionFailure.detailMsg=Verbindung zu HDFS "{0}" fehlgeschlagen. Bitte Verbindungsparameter prüfen.
+CreateHDFSSchemaAction.checkConnection=Prüfe HDFS Verbindung...
 HDFSFileSelectorForm.schemaTree.sizeColumn=Größe
 HDFSSchemaForm.button.guessSchema=Ermittle Schema
