--- a/org.talend.repository.hcatalog.nl/src/messages_de.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_de.properties
@@ -8,6 +8,8 @@ HCatalogSchemaWizardPage.descriptionCreate=Ein Schema dem Repository hinzufügen
 HCatalogSchemaWizardPage.titleUpdate=Aktualisiere Schema "{0}"
 HCatalogSchemaWizard.persistenceException=Fehler beim Zugriff auf die Daten
 AbstractHCatalogForm.checkConnection.success.title=Prüfe Verbindung
+AbstractHCatalogForm.checkConnection.success.msg="{0}" Verbindung erfolgreich.
+AbstractHCatalogForm.checkConnection.failure.msg=Verbindungsfehler. Sie müssen die HCatalog Einstellungen ändern.
 HCatalogTableSelectorForm.schemaTree.nameColumn=Name
 HCatalogTableSelectorForm.schemaTree.typeColumn=Typ
 HCatalogTableSelectorForm.schemaTree.numberColumn=Spaltennummer
@@ -18,6 +20,7 @@ HCatalogTableSelectorForm.button.checkConnection=Prüfe Verbindung
 HCatalogTableSelectorForm.Pending=Pending
 HCatalogTableSelectorForm.title.confirm=Bestätigen
 HCatalogTableSelectorForm.title.success=Erfolgreich
+HCatalogTableSelectorForm.tableIsExist="{0}" existiert bereits in "{1}", wollen Sie "{0}" überschreiben?
 HCatalogForm.text.port=Port
 HCatalogForm.text.userName=Benutzername
 HCatalogForm.check.database=Datenbank muss spezifiziert sein
@@ -37,5 +40,6 @@ HCatalogSchemaForm.check.tableNameIsEmpty=Schema hat einen leeren Namen, muss fe
 HCatalogSchemaForm.check.tableNameIsExist=Name existiert bereits "{0}"
 CreateHCatalogSchemaAction.createLabel=Schema ermitteln
 CreateHCatalogSchemaAction.editLabel=Ändere Schema
+HCatalogForm.check.port.invalid=Port ist ungültig
 HCatalogForm.check.userName.invalid=Benutzername ist ungültig
 HCatalogForm.check.database.invalid=Datenbank ist ungültig
