--- a/org.talend.repository.hdfs.nl/src/messages_ja.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_ja.properties
@@ -44,3 +44,6 @@ CreateHDFSSchemaAction.checkConnection=HDFS\u63A5\u7D9A\u3092\u30C1\u30A7\u30C3\
 HDFSFileSelectorForm.schemaTree.sizeColumn=\u30B5\u30A4\u30BA
 HDFSSchemaForm.button.guessSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u63A8\u5B9A
 HDFSSchemaForm.button.guessSchema.tooltip=\u3053\u306E\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u3066\u8A73\u7D30\u306A\u30B9\u30AD\u30FC\u30DE\u3092\u63A8\u5B9A..
+HDFSForm.skipSettings=\u30B9\u30AD\u30C3\u30D7\u884C\u6570
+HDFSForm.text.header=\u30D8\u30C3\u30C0\u30FC
+HDFSForm.button.firstRowsIsCaption=\u5148\u982D\u884C\u3092\u30AB\u30E9\u30E0\u540D\u306B\u8A2D\u5B9A
